// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document no data 1`] = `
<TooltipEntity
  contentState={
    Immutable.Record {
      "entityMap": Object {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "a": Immutable.Record {
          "key": "a",
          "type": "unstyled",
          "text": "test",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "a",
        "anchorOffset": 0,
        "focusKey": "a",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "a",
        "anchorOffset": 0,
        "focusKey": "a",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    }
  }
  entityKey="2"
  icon={
    <Icon
      className={null}
      name="doc-full"
      title={null}
    />
  }
  label=""
  onEdit={[Function]}
  onRemove={[Function]}
  url=""
>
  test
</TooltipEntity>
`;

exports[`Document works 1`] = `
<TooltipEntity
  contentState={
    Immutable.Record {
      "entityMap": Object {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "a": Immutable.Record {
          "key": "a",
          "type": "unstyled",
          "text": "test",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "a",
        "anchorOffset": 0,
        "focusKey": "a",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "a",
        "anchorOffset": 0,
        "focusKey": "a",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    }
  }
  entityKey="1"
  icon={
    <Icon
      className={null}
      name="doc-full"
      title={null}
    />
  }
  label="example.pdf"
  onEdit={[Function]}
  onRemove={[Function]}
  url="/example.pdf"
>
  test
</TooltipEntity>
`;
